# L3

./: .gitignore  Cargo.toml
task_1/: .env  Cargo.toml  README.md  config.toml  docker-compose.yaml
task_1/migrations/v1/: posts.sql  users_table.sql
task_1/src/: main.rs
task_1/src/api/: create_post.rs  delete_post.rs  get_post.rs  like_post.rs  login.rs  middleware.rs  mod.rs  register.rs  request_structs.rs  response_structs.rs
task_1/src/app/: mod.rs
task_1/src/config/: cli.rs  migration_config.rs  mod.rs  postgres_config.rs  server_config.rs  utils.rs
task_1/src/domain/: mod.rs  models.rs  social_network_repository.rs  social_network_service.rs  token_manager.rs
task_1/src/errors/: mod.rs
task_1/src/infrastructe/: mod.rs  repository.rs  secret_vault.rs  server_state.rs
task_2/: README.md
task_2/task_creator/: Cargo.toml
task_2/task_creator/src/: api.rs  cli.rs  errors.rs  main.rs  request_models.rs  state.rs
task_2/task_creator/src/domain/: mod.rs  models.rs  task_saver.rs
task_2/task_creator/src/infrastracture/: saver.rs
task_2/task_logger/: Cargo.toml
task_2/task_logger/src/: cli.rs  errors.rs  main.rs
task_2/task_logger/src/task_logger/: logger.rs  mod.rs  utils.rs
task_2/task_processor/: .env  Cargo.toml  docker-compose.yaml
task_2/task_processor/src/: cli.rs  errors.rs  main.rs  models.rs
task_2/task_processor/src/task_proccesor/: console_runner.rs  inotifier.rs  job_runner.rs  kafka_runner.rs  mod.rs  proccesor.rs  utils.rs  worker.rs
task_3/: Cargo.toml  README.md
task_3/src/: app.rs  cli.rs  errors.rs  main.rs
task_3/src/api/: get_messages.rs  join.rs  leave.rs  mod.rs  request_structs.rs  response_structs.rs  send_message.rs
task_3/src/domain/: mod.rs  models.rs  online_chat.rs
task_3/src/infrastructure/: chat.rs  errors.rs  mod.rs  room.rs  server_state.rs  user.rs
task_4/: Cargo.toml  README.rd  config.toml  docker-compose.yaml
task_4/migrations/: 20241019120714_users_table.sql  20241019120726_products_table.sql  20241019120737_notify_fn.sql  20241019120745_users_trigger.sql  20241019120755_products_trigger.sql
task_4/src/: app.rs  cli.rs  main.rs  server_errors.rs
task_4/src/config/: kafka_config.rs  mod.rs  postgres_config.rs  utils.rs
task_4/src/domain/: change_notifier.rs  kafka_sender.rs  mod.rs  product_repository.rs  product_service.rs  products_models.rs  user_repository.rs  user_service.rs  users_models.rs  utils.rs
task_4/src/handlers/: create_product.rs  json_extractor_with_validation.rs  mod.rs  reponses.rs  requests.rs
task_4/src/handlers/products_handlers/: create_product.rs  delete_product.rs  mod.rs  requests.rs  update_product.rs
task_4/src/handlers/user_handlers/: create_user.rs  delete_user.rs  mod.rs  requests.rs  update_user.rs
task_4/src/infrastructe/: errors.rs  kafka_producer.rs  mod.rs  notifier.rs  postgres_repo.rs  server_state.rs
task_5/: Makefile  README.md  docker-compose.yaml  nginx.conf
task_5/migrations/: 20241025105946_tasks.sql
task_5/task_executor/: Cargo.toml  Dockerfile  config.toml
task_5/task_executor/src/: cli.rs  main.rs
task_5/task_executor/src/config/: executor_config.rs  last_task.rs  mod.rs  redis_config.rs  tracing_config.rs
task_5/task_executor/src/domain/: file_manager.rs  mod.rs  models.rs  redis_receiver.rs  task_executor.rs
task_5/task_executor/src/infrastructe/: app.rs  last_task_manager.rs  mod.rs  redis_client.rs  utils.rs
task_5/task_executor/src/infrastructe/executor/: http_client.rs  mod.rs  worker.rs
task_5/task_notifier/: Cargo.toml  Dockerfile  config.toml
task_5/task_notifier/src/: app.rs  cli.rs  main.rs
task_5/task_notifier/src/api/: get_notifications.rs  mod.rs  reponses.rs  requests.rs
task_5/task_notifier/src/config/: file_manager_config.rs  mod.rs  redis_config.rs  tracing_config.rs
task_5/task_notifier/src/domain/: last_notifier_tasks.rs  mod.rs  models.rs  redis_notifier.rs  task_notifier_service.rs
task_5/task_notifier/src/infrastructe/: app_state.rs  file_manager.rs  mod.rs  redis_stream.rs
task_5/task_service/: Cargo.toml  Dockerfile  config.toml
task_5/task_service/migrations/: 20241025105946_tasks.sql  20241025134411_notify_fn.sql  20241025134524_trigger.sql
task_5/task_service/src/: app.rs  cli.rs  errors.rs  main.rs
task_5/task_service/src/api/: create_task.rs  get_task_info.rs  mod.rs  requests.rs  response.rs  update_task_status.rs
task_5/task_service/src/config/: mod.rs  postgres_config.rs  redis_config.rs  tracing_config.rs
task_5/task_service/src/domain/: message_queue_sender.rs  mod.rs  models.rs  service_error.rs  table_change_listener.rs  task_repository.rs  task_service.rs  tasks_table_change_listener.rs
task_5/task_service/src/infrastructe/: app_state.rs  mod.rs  postgres_repo.rs  redis_client.rs  table_listener.rs  utils.rs
task_5/tempo-data/config/shared/: tempo.yaml
