[package]
name = "task_1"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.64"
hmac = "0.12.1"
bb8-postgres = "0.8.1"
bb8 = "0.8.5"
jsonwebtoken = "9.3.0"
chrono = "0.4.38"

[dependencies.tokio-postgres]
version = "0.7.12"
features = ["with-uuid-1"]


[dependencies.axum]
version="0.7.7"
features=["macros"]



[dependencies.tokio]
version = "1.40.0"
features = ["full"]

[dependencies.serde]
version = "1.0.210"
features = ["derive"]


[dependencies.validator]
version = "0.18.1"
features = ["derive"]

[dependencies.uuid]
version = "1.10.0"
features = ["v4","serde"]

[dependencies.clap]
version = "4.5.18"
features = ["derive"]

[dependencies.confique]
version="0.2.5"
features=["toml"]