[package]
name = "task_3"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
chrono = { version = "0.4.38", features = ["serde"] }
dashmap = "6.1.0"
serde = { version = "1.0.210", features = ["derive","rc"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
validator = { version = "0.18.1", features = ["derive"] }
anyhow = "1.0.89"
log = "0.4.22"
env_logger = "0.11.5"
serde_json = "1.0.128"
tokio-util = { version = "0.7.12", features = ["rt"] }
typetag = "0.2.18"
clap = {version ="4.5.19",features = ["derive"]}
