[package]
name = "task_4"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
clap = { version = "4.5.20", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
sqlx = { version = "0.8", features = [ "runtime-tokio" ] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
validator = { version = "0.18.1", features = ["derive"] }
