[package]
name = "task_creator"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.7.7"
clap = {version ="4.5.19",features = ["derive"]}
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
thiserror = "1.0.64"
chrono = { version = "0.4.38", features = ["serde"] }
