[package]
name = "task_logger"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
fs4 = { version = "0.9.1", features = ["tokio"] }
inotify = "0.11.0"
log = "0.4.22"
env_logger = "0.11.5"
tokio = { version = "1.40.0", features = ["full"] }
thiserror = "1.0.64"
serde_json = "1.0.128"
tokio-util = "0.7.12"