[package]
name = "task_processor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
clap = {version ="4.5.19",features = ["derive"]}
inotify = "0.11.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
crossbeam = "0.8.4"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.10.0", features = ["serde"] }
tokio-util = "0.7.12"
thiserror = "1.0.64"
dotenv = "0.15.0"
rdkafka = "0.36.2"
async-trait = "0.1.83"
log = "0.4.22"
env_logger = "0.11.5"
