[package]
name = "task_service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
clap = {version = "4.5.20",features = ["derive"]}
serde = { version = "1.0.213", features = ["derive"] }
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
confique = { version = "0.3.0", features = ["toml"] }
sqlx = { version = "0.8", features = [ "runtime-tokio","postgres","uuid"] }
validator = { version = "0.18.1", features = ["derive"] }
tokio-util = {version="0.7.12",features = ["rt"]}