[package]
name = "task_service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
thiserror = "1.0.65"
log = "0.4.22"
serde_json = "1.0.132"

tracing = "0.1.40"
opentelemetry = "0.26.0"
tracing-opentelemetry = "0.27.0"
opentelemetry-http = "0.26.0"

[dependencies.tower-http]
version = "0.6.1"
features = ["trace"]

[dependencies.redis]
version = "0.27.5"
features = ["tokio-comp"] 


[dependencies.tokio-util]
version="0.7.12"
features = ["rt"]

[dependencies.validator]
version = "0.18.1"
features = ["derive"]

[dependencies.sqlx]
version = "0.8"
features = [ "runtime-tokio","postgres","uuid","chrono"]

[dependencies.confique]
version = "0.3.0"
features = ["toml"]

[dependencies.uuid]
version = "1.11.0"
features = ["v4", "serde"] 

[dependencies.tokio]
version = "1.41.0"
features = ["full"]
[dependencies.serde]
version = "1.0.213"
features = ["derive"] 
[dependencies.clap]
version = "4.5.20"
features = ["derive"]

[dependencies.chrono]
version = "0.4.38"
features = ["serde"] 

[dependencies.tracing-subscriber]
version="0.3.18"
features=["env-filter"]

[dependencies.opentelemetry-otlp]
version="0.26.0"
features = [ "trace","grpc-tonic" ]

[dependencies.opentelemetry_sdk]
version="0.26.0"
features = [ "rt-tokio" ]



[profile.release]
opt-level = "z" 
